web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-const-const/output.txt
[SyntaxError]: Identifier has already been declared. (1,14)
1|const foo=1, foo=2;
 |            ^
